--- a/shapes.html
+++ b/shapes.html
@@ -32,6 +32,10 @@
             <h2>Complex shape</h2>
             <img src="images/shapeExplanations.png" alt="expl. complex shape" style="height: 30em">
         </section>
+        <section id='complicated_path'>
+            <h2>Complex path</h2>
+            <img src="images/pathExplanations.png" alt="expl. complex path" style="height: 30em">
+        </section>
         
     </body>
 </html>
